--- a/department-service.properties
+++ b/department-service.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.property.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.boot.message= hello from spring boot
